--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,10 @@ a:active {
     margin-bottom: 2rem;
 }
 
+.margin1rem--bottom {
+    margin-bottom: 1.75rem;
+}
+
 .bodyType {
     font-size: 1.375rem;
     line-height: 2.3rem;
@@ -420,6 +424,17 @@ a:hover {
     height: 518px;
 }
 
+.playdiumPrototype {
+    width: 1100px;
+    height: 850px;
+}
+
+.headerTitleButton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 /* Footer
    ========================================================================== */
 
@@ -638,6 +653,16 @@ footer {
     .avatar {
         display: none;
     }
+    .playdiumPrototype {
+        width: 100%;
+        height: 500px;
+    }
+    .headerTitleButton {
+        display: block;
+    }
+    .buttonMarginTop {
+        margin-top: 2.5rem;
+    }
 }
 
 /* Medium Device media query 
@@ -695,6 +720,10 @@ footer {
     .footerRight {
         margin-top: 2.75rem;
     }
+    .playdiumPrototype {
+        width: 690px;
+        height: 600px;
+    }
 }
 
 /* Large Device media query 
@@ -729,6 +758,10 @@ footer {
     }
     .footerContainer {
         width: 1000px;
+    }
+    .playdiumPrototype {
+        width: 1000px;
+        height: 750px;
     }
 }
 
