--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,11 @@ a:hover {
     align-items: center;
 }
 
+.rawScreens {
+    width: 100%;
+    height: 100%;
+}
+
 /* Footer
    ========================================================================== */
 
