--- a/css/main.css
+++ b/css/main.css
@@ -244,3 +244,54 @@ textarea {
     page-break-after: avoid;
   }
 }
+
+/* Gallery Section Styling
+   ========================================================================== */
+
+.contentGallery {
+  animation: image-load2 1s ease;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-gap: 1.5rem;
+  align-items: stretch;
+  overflow: hidden;
+}
+
+.gallery li {
+  list-style: none;
+  margin-right: 0;
+}
+
+.gallery li:last-child {
+  margin-bottom: 0;
+}
+
+.externalIcon {
+  padding: 1rem;
+  z-index: 2;
+  position: absolute;
+  font-size: 1rem;
+}
+
+.content {
+  animation: image-load 1s ease;
+}
+
+.contentGallery {
+  animation: image-load2 1s ease;
+}
+
+/* Photography Gallery Styling
+   ========================================================================== */
+
+.imagePhotography {
+  object-fit: cover;
+  /*border-radius: 0.5rem;*/
+  width: 100%;
+  /*Change height to auto for true size */
+  height: 100%;
+  /*height: 40rem;*/
+}
