--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ a:active {
     margin-top: 3rem;
 }
 
+.marginL--top {
+    margin-top: 3.25rem;
+}
+
 .marginParaSpace--bottom {
     margin-bottom: 2rem;
 }
@@ -667,6 +671,9 @@ footer {
     }
     .buttonMarginTop {
         margin-top: 2.5rem;
+    }
+    .button {
+        padding: 0.5rem 2rem;
     }
 }
 
