--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ nav {
     align-items: center;
     text-align: left;
     margin: 0 5rem 1.5rem 5rem;
-    padding: 1.75rem 0 2rem 0;
+    padding: 1.75rem 0 1.8rem 0;
 }
 
 .navLinks {
@@ -479,6 +479,10 @@ a:hover {
     font-weight: 700;
     letter-spacing: 0.06em;
     margin-right: auto;
+}
+
+.workNav, .aboutNav, .resumeNav {
+    font-size: 1.125rem;
 }
 
 /* Header
@@ -917,6 +921,9 @@ footer {
 =============================================================== */
 
 @media only screen and (max-width: 744px) {
+    .navLogo {
+        display: none;
+    }
     .container {
         margin: 0 1.5rem 0 1.5rem;
     }
