--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ nav {
 
 #active {
     color: #444444;
-    /* font-weight: 700; */
+    font-weight: 700;
 }
 
 .navLinks {
@@ -496,14 +496,14 @@ a:hover {
 
 .navLogo {
     cursor: url("../img/fingerPointUp-36px.png") 1 14, auto;
-    font-size: 1.25rem;
+    font-size: 1.125rem;
     font-weight: 700;
     letter-spacing: 0.06em;
     margin-right: auto;
 }
 
 .workNav, .aboutNav, .resumeNav {
-    font-size: 1.125rem;
+    font-size: 1rem;
 }
 
 /* Header
