--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ html {
     /* background: #F2F3F8; */
     /* background: rgba(242, 243, 248, 0.9); */
     background: rgba(250, 250, 250, 0.9);
+    /* background: rgba(255, 255, 255, 0.9); */
     backdrop-filter: blur(5px);
     /* box-shadow: 0px 0px 6px 2px #d3d3d3; */
     box-shadow: 0px 0px 6px 2px #d7dbe6;
@@ -95,7 +96,8 @@ html {
 }
 
 .marginTopBottom {
-    margin: 2.5rem 0 7rem 0;
+    /* margin: 2.5rem 0 7rem 0; */
+    margin: 7rem 0 7rem 0;
 }
 
 /* .spacer {
@@ -132,13 +134,13 @@ html {
    ========================================================================== */
 
 article {
-    transition: 0.5s ease;
+    /* transition: 0.5s ease; */
 }
 
 article:hover {
-    opacity: 0.5;
-    transition: .5s ease;
-    transform: scale(0.95);
+    /* opacity: 0.5; */
+    /* transition: .5s ease; */
+    /* transform: scale(0.95); */
 }
 
 /* Links
@@ -314,6 +316,13 @@ a:active {
     /*#FFFACD;*/
     /*#dbf6ff*/
     /*light blue*/
+}
+
+.viewProject {
+    color: #959eb8;
+    letter-spacing: 0.03em;
+    font-weight: 500;
+    font-size: 0.95rem;
 }
 
 .bodyTypeBold-Green {
@@ -509,6 +518,14 @@ a:hover {
 /* Header
 =============================================================== */
 
+.whiteBG {
+    background-color: #ffffff;
+}
+
+.offWhiteBG {
+    background-color: #f8f8f8;
+}
+
 .jasperHeader {
     display: flex;
     justify-content: space-between;
@@ -564,8 +581,8 @@ a:hover {
 }
 
 .headerDrawing {
-    width: 364px;
-    height: 364px;
+    width: 100%;
+    height: 100%;
 }
 
 /* Projects on Homepage
@@ -575,13 +592,50 @@ a:hover {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    grid-gap: 4rem;
+    grid-gap: 3rem;
     margin-bottom: 4rem;
+    background-color: #f8f8f8;
+    padding: 3rem;
+    border-radius: 10px;
+}
+
+.projectSingle:hover {
+    background-color: #ffffff;
+}
+
+.projectSingle>.projectCover {
+    transition: 0.5s ease;
+}
+
+.projectSingle:hover>.projectCover {
+    transform: scale(1.05);
+}
+
+.projectSingle>.sec>.projectTitle>.projectArrow {
+    transition: 0.5s ease;
+}
+
+.projectArrow {
+    color: #b3b3b3;
+}
+
+.projectSingle:hover>.sec>.projectTitle>.projectArrow {
+    margin-left: 0.75rem;
+    color: #4080FF;
+    /* font-size: 2.5rem; */
+}
+
+.projectSingle>.projectTitle {
+    transition: 0.5s ease;
+}
+
+.projectSingle:hover>.projectTitle {
+    color: #4080FF;
 }
 
 .projectCover {
-    width: 558px;
-    height: 360px;
+    width: 548px;
+    height: 350px;
     border-radius: 10px;
 }
 
@@ -611,7 +665,8 @@ a:hover {
 }
 
 .projectType {
-    margin: 1.5rem 0.5rem 0 0;
+    /* margin: 1.5rem 0.5rem 0 0; */
+    margin: 0 0.5rem 0.75rem 0;
     /* background-color: #e8e7ec; */
     /* background-color: #fd9c00; */
     /* background-color: #f7b54d; */
@@ -628,6 +683,10 @@ a:hover {
     font-weight: 500;
     box-shadow: 0px 2px 8px 2px #e5e8f1;
     font-size: 0.95rem;
+}
+
+.projectType:first-of-type {
+    margin-top: 1.5rem;
 }
 
 .awardText {
@@ -822,7 +881,9 @@ a:hover {
    ========================================================================== */
 
 footer {
-    background-color: #F2F3F8;
+    /* background-color: #F2F3F8; */
+    background-color: #edeef5;
+    /* background-color: #e8e9f0; */
     display: flex;
     justify-content: center;
 }
@@ -949,7 +1010,7 @@ footer {
         margin: 0 1.5rem 0 1.5rem;
     }
     .marginTopBottom {
-        margin: 0.8rem 0 4rem 0;
+        margin: 1.5rem 0 4rem 0;
     }
     .jasperTitle {
         /* font-size: 1.5rem; */
@@ -995,6 +1056,15 @@ footer {
     }
     .headerDrawing {
         display: none;
+    }
+    .projectSingle {
+        padding: 0;
+    }
+    .projectSingle:hover {
+        background-color: #f8f8f8;
+    }
+    .projectSingle:hover>.projectCover {
+        transform: scale(1.0);
     }
     .projectSingle, .aboutPhotoGallery {
         display: block;
@@ -1067,7 +1137,7 @@ footer {
         margin-top: 2.5rem;
     } **/
     .button {
-        padding: 0.5rem 2rem;
+        padding: 0.75rem 2rem;
     }
     .bodyWrapper {
         width: 100%;
@@ -1207,8 +1277,8 @@ footer {
         margin: 2rem 0 5rem 0;
     }
     .headerDrawing {
-        width: 405px;
-        height: 405px;
+        width: 100%;
+        height: 100%;
     }
     .projectSingle {
         grid-gap: 3rem;
