--- a/css/style.css
+++ b/css/style.css
@@ -723,7 +723,7 @@ a:hover {
 }
 
 .fbHero {
-    background-image: url(../img/fbIntern/pricePrefsCover.png);
+    background-image: url(../img/facebook-rainbow.gif);
 }
 
 .kumoAppHero {
