--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,8 @@ a:hover {
     font-weight: 300;
     /* letter-spacing: 0.01em; */
     /* color: #444444; */
-    color: #6a6a6b;
+    /* color: #6a6a6b; */
+    color: #444444;
     margin-bottom: 1.2rem;
 }
 
@@ -554,9 +555,10 @@ a:hover {
 }
 
 .fbLinkHeader {
-    color: #4080FF;
+    /* color: #4080FF; */
     /* border-bottom: 0.125rem dotted; */
     border-bottom: 1.25px dashed;
+    color: #121212;
 }
 
 .socialHeader {
